# agent-computer

./: .gitmodules  .mcp.json  Cargo.toml  README.md
agentos-compositor/: Cargo.toml
agentos-compositor/src/: font.rs  input.rs  main.rs  mcp.rs  mcp_dispatch.rs  render.rs  state.rs
agentos-fuse/: Cargo.toml
agentos-fuse/src/: main.rs  vfs.rs
agentos-host/: Cargo.toml
agentos-host/src/: display.rs  fs_server.rs  headless.rs  krun_ffi.rs  main.rs  mcp.rs  mcp_capture.rs  mcp_http.rs  mcp_stdio.rs  slirp.rs  vm.rs
agentos-host/src/app/: delegate.rs  mod.rs  view.rs
agentos-host/src/input/: keyboard.rs  keymap.rs  mod.rs  mouse.rs  types.rs
agentos-protocol/src/: fs.rs  lib.rs
apc-browserd/: README.md
apc-browserd/scripts/: build.sh  lib.sh  package-runtime.sh
apc-compositor/: Cargo.toml
apc-compositor/src/: browser.rs  grabs.rs  input.rs  main.rs  mcp.rs  mcp_dispatch.rs  render.rs  state.rs
apc-fuse/: Cargo.toml
apc-fuse/src/: main.rs  vfs.rs
apc-host/: Cargo.toml  build.rs
apc-host/src/: fs_server.rs  headless.rs  main.rs  mcp.rs  mcp_capture.rs  slirp.rs  vm.rs
apc-host/src/app/: delegate.rs  mod.rs
apc-host/src/input/: keyboard.rs  mod.rs  mouse.rs
apc-protocol/: Cargo.toml
apc-protocol/src/: lib.rs
guest/: build-compositor.sh  build-fuse.sh  build.sh
guest/rootfs/etc/udev/rules.d/: 90-apc-input.rules
guest/rootfs/home/agent/.config/alacritty/: alacritty.toml
