[workspace]
members = ["apc-host", "apc-compositor", "apc-fuse", "apc-protocol"]
default-members = ["apc-host", "apc-protocol"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
apc-protocol = { path = "apc-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
